tests/golden/invalid/tabs-spaces.rego.stderr
fregot (typecheck error):
  "tabs-spaces.rego" (line 5, column 9):
  Subtype error:

    5| 	1 > "what?"
       	^^^^^^^^^^^

  Cannot use type string as number

fregot (typecheck error):
  "tabs-spaces.rego" (line 9, column 5):
  Subtype error:

    9|     1 > "what?"
           ^^^^^^^^^^^

  Cannot use type string as number

fregot (typecheck error):
  "tabs-spaces.rego" (line 13, column 19):
  Subtype error:

    13| 	 	  1 > "what?"
        	 	  ^^^^^^^^^^^

  Cannot use type string as number
